# JapaneseOCR-to-Anki-Flashcards

./: .gitignore  README.md  extract.py  pyproject.toml  requirements.txt
japtoanki/: cli.py  core.py  mokuroRunner.py
