[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "japtoanki"
version = "0.1.2"
description = "extracts kanji sentences using ocr for automatic anki flashcards"
requires-python = ">=3.12"
readme = "readmepipy.md"
license = { text = "mit" }

authors = [
  { name = "nemi tatsu", email = "nemitatsu@proton.me" }
]

dependencies = [
  "requests",
  "tqdm",
  "fugashi",
  "unidic-lite",
  "jaconv",
  "manga-ocr",
  "torch",
  "transformers",
  "protobuf",
]

[project.scripts]
japtoanki = "japtoanki.cli:main"

[tool.setuptools]
packages = ["japtoanki"]
